[gd_scene load_steps=2 format=2]

[ext_resource path="res://material_maker/tools/share/share_node_dialog.gd" type="Script" id=1]

[node name="Share" type="Window"]
anchor_right = 0.452
anchor_bottom = 0.529
offset_right = -0.560059
offset_bottom = 0.119965
window_title = "Share custom node"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/offset_right = 5
custom_constants/offset_top = 5
custom_constants/offset_left = 5
custom_constants/offset_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 573.0
offset_bottom = 376.0

[node name="Disclaimer" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
offset_right = 568.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 550, 0 )
size_flags_horizontal = 3
bbcode_enabled = true
text = "Before you share a custom node, there are a few things you may want to know.

Since the nodes you share can be used in any material, it is necessary that they remain available and compatible so those materials continue working as expected. Consequently [color=red]it is not possible to delete or modify a node that has been submitted[/color].

Custom nodes also have to be as easy to use as possible, and this is why it is required that the node as well as all its inputs, parameters and outputs are documented (i.e. have a short and long description). It is also recommended (but not required) to specify the author at the end of the long description of the node."
text = "Before you share a custom node, there are a few things you may want to know.

Since the nodes you share can be used in any material, it is necessary that they remain available and compatible so those materials continue working as expected. Consequently it is not possible to delete or modify a node that has been submitted.

Custom nodes also have to be as easy to use as possible, and this is why it is required that the node as well as all its inputs, parameters and outputs are documented (i.e. have a short and long description). It is also recommended (but not required) to specify the author at the end of the long description of the node."
fit_content_height = true

[node name="Checks" type="GridContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 154.0
offset_right = 568.0
offset_bottom = 154.0
columns = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
offset_top = 158.0
offset_right = 568.0
offset_bottom = 162.0

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_left = 227.0
offset_top = 166.0
offset_right = 341.0
offset_bottom = 186.0
size_flags_horizontal = 4

[node name="Share" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
offset_right = 55.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 55, 0 )
text = "Share"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
offset_left = 59.0
offset_right = 114.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 55, 0 )
text = "Cancel"

[connection signal="popup_hide" from="." to="." method="_on_Share_popup_hide"]
[connection signal="minimum_size_changed" from="MarginContainer" to="." method="_on_MarginContainer_minimum_size_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Share" to="." method="_on_Share_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Cancel" to="." method="_on_Share_popup_hide"]
